--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.3",
     "express-art-template": "^1.0.1",
     "md5": "^2.3.0",
+    "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "svg-captcha": "^1.4.0"
   }
